bugfix: missing icons and mobile overflow issue

--- a/src/app.css
+++ b/src/app.css
@@ -6,3 +6,8 @@ html {
     scroll-behavior: smooth;
     background-color: black;
 }
+
+body {
+    overflow-x: clip;
+    overflow-y: auto;
+}
